--- a/taps-shadow-wrapper-v-0-0-1.css
+++ b/taps-shadow-wrapper-v-0-0-1.css
@@ -3,7 +3,8 @@
 
 The MIT License (MIT)
 
-Copyright (c) 2020 - Tapan Mahapatra -  
+Copyright (c) 2020 - Tapan Mahapatra -
+https://raw.githubusercontent.com/TapsUIUX/TapsOpenSourceCDN/master/taps-shadow-wrapper-v-0-0-1.css
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
